update slider to fix images issues

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.4.2",
         "@fortawesome/free-solid-svg-icons": "^6.4.2",
         "@fortawesome/vue-fontawesome": "^3.0.3",
-        "@vue/test-utils": "^2.4.1"
+        "@vue/test-utils": "^2.4.1",
+        "vue3-carousel": "^0.3.1"
     }
 }
